Improved user experience if server is not loaded yet, improved/added styling for the most of the component, improved navbar navigation, fixed some overflow issue, fixed issue where components were not rendered corretly after server starts

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root{
-    --main-color: #0906e6;
-    --dark-main: #0b07d2;
+    --main-color: #0804ff;
+    --dark-main: #0a07be;
     --additional-color: rgb(227, 234, 254);
     --additional-color2: rgb(97, 97, 252);
     --additional-color3: rgb(185, 216, 243);
