--- a/src/styles/contacts.module.css
+++ b/src/styles/contacts.module.css
@@ -3,12 +3,15 @@
     padding: 2rem;
     margin: 0;
     list-style-type: none;
-    width: 12rem;
+    width: 13rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1rem;
-    background-color: var(--main-color);
+    box-shadow: 1px 1px 2px rgb(188, 187, 187);
+    overflow: scroll;
+    scrollbar-color: var(--additional-color2) white;
+    scrollbar-width: thin;
 }
 
 .contactsList a{
@@ -47,7 +50,6 @@
     border-radius: 2rem;
     padding-top: 1rem;
     padding-bottom: 0.5rem;
-
 }
 
 .icon{
@@ -56,7 +58,7 @@
 
 .iconContainer{
     height: 3.2rem;
-    background-color: var(--additional-color3);
+    background: linear-gradient(var(--additional-color2), var(--additional-color3));
     border-radius: 2rem;
 }
 
@@ -75,15 +77,16 @@
     padding: 0.3rem;
     border-radius: 2rem;
     width: 8rem;
+    background-color: var(--additional-color2);
+    color: white;
 }
 
 .input::placeholder{
-    color: black;
+    color: white;
 }
 
 .input:focus{
     outline: none;
-    background-color: var(--additional-color3);
 }
 
 .name{
