--- a/src/styles/profile.module.css
+++ b/src/styles/profile.module.css
@@ -34,7 +34,7 @@
 }
 
 .iconContainer{
-    background-color: var(--additional-color3);
+    background: linear-gradient(var(--additional-color2), var(--additional-color3));
     border-radius: 50%;
     padding: 1rem;
 }
@@ -76,4 +76,10 @@
 
 .input:focus::placeholder{
     color: white;
+}
+
+.loading{
+    margin: auto;
+    font-size: 2rem;
+    font-weight: bold;
 }
